dhplay/dhplay.h

		#define PLAYSDK_API __declspec(dllexport)
		#define PLAYSDK_API __declspec(dllimport)
	#define CALLMETHOD __stdcall
	#define CALLMETHOD
	#define PLAYSDK_API //extern "C"
#define BOOL        int
#define PBYTE		BYTE*
#define LONG		int
#define DWORD		unsigned int
#define HWND		void*

#define STREAME_REALTIME				0		// The real-time has the highest priority
#define STREAME_FILE					1		// The fluency has the highest priority


/************************************************************************/
//> stream operation
/************************************************************************/

/**
 * Set stream play mode. You need to set before playing
 *
 * @param[in] nPort Port number
 * @param[in] nMode STREAME_REALTIME Real-time mode (default);STREAME_FILE File mode.Real-time mode. It is suitable for network real-time mode.The
 *						decoder card will begin decoding right now
 *						File mode. It is suitable for you to input file data as stream
 *						when PLAY_InputData() return FALSE, you need to wait and then input again.
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_SetStreamOpenMode(LONG nPort,DWORD nMode);


/**
 * Open stream interface (Just the same as open a file)
 *
 * @param[in] nPort Port number
 * @param[in] pFileHeadBuf It is not available now. Please input NULL
 * @param[in] nSize It is not available now.Please input 0
 * @param[in] nBufPoolSize Set storage data stream buffer size in the play The value ranges is 
 *			[SOURCE_BUF_MIN,SOURCE_BUF_MAX]. Usually it is 900*1024. Please increase the value if the data are not even
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_OpenStream(LONG nPort,PBYTE pFileHeadBuf,DWORD nSize,DWORD nBufPoolSize);


/**
 * Close stream
 *
 * @param[in] nPort Port number
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_CloseStream(LONG nPort);


/**
 * Input the stream data you get from the card. Enable stream and Then call PLAY_Play to input data
 *
 * @param[in] nPort Port number
 * @param[in] pBuf Buffer address
 * @param[in] nSize Buffer size
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_InputData(LONG nPort,PBYTE pBuf,DWORD nSize);


/************************************************************************/
//> play control
/************************************************************************/

/**
 * Start play. If it is playing, then return current play status to normal speed
 *
 * @param[in] nPort Port number
 * @param[in] hWnd Play window handle
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_Play(LONG nPort, HWND hWnd);


/**
 * Stop Play
 *
 * @param[in] nPort Port number
 * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_Stop(LONG nPort);


/************************************************************************/
//> buffer
/************************************************************************/

/**
 * Get sourcing buffer remained data in stream play mode.
 *
 * @param[in] nPort Port number
 * @return DWORD,Current sourcing buffer size(byte)
 */
PLAYSDK_API DWORD CALLMETHOD PLAY_GetSourceBufferRemain(LONG nPort);


/**
 * To get player buffer size (frame amount or byte). You can use this interface to get the 
 * data in the buffer so that you can estimate the network delaying time.
 *
 * @param[in] nPort Port number
 * @param[in] nBufType,Buffer type, Please refer to macro definition macro definition:
 *         	  BUF_VIDEO_SRC 1 
 *	          BUF_AUDIO_SRC 2 
 *            BUF_VIDEO_RENDER 3 
 *	          BUF_AUDIO_RENDER 4
 *			  BUF_VIDEO_ALL	5  all video buffer(millisecond)
 * @return DWORD,Return different buffer values in accordance with various parameters. Source buffer 
 *  returns byte and other buffer return the frame amount after decoding.
 */
PLAYSDK_API DWORD CALLMETHOD PLAY_GetBufferValue(LONG nPort,DWORD nBufType);


/*
 * Begin record stream data. It applies to stream mode only. Call it after PLAY_Play.
 *
 * @param[in] nPort Port number
 * @param[in] sFileName Record file name. If there is no existing folder in the name, then create a new folder
 * @param[in] idataType see DATA_RECORD_TYPE
  * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
typedef enum
{
    DATA_RECORD_ORIGINAL = 0,     // Raw video stream
    DATA_RECORD_AVI,              // AVI
    DATA_RECORD_ASF,              // ASF   
    DATA_RECORD_ORIGINAL_SEGMENT, // Segment Raw video stream
    DATA_RECORD_RESIZE_AVI,       // Resolution Changed AVI, target width and height is needed. use PLAY_ResolutionScale.
    DATA_RECORD_MP4,              // MP4 
    DATA_RECORD_RESIZE_MP4,       // Resolution Changed MP4, target width and height is needed. use PLAY_ResolutionScale.
    DATA_RECORD_MP4_NOSEEK,       // No Seek MP4    
    DATA_RECORD_RESIZE_MP4_NOSEEK,// Resolution Changed No Seek MP4, target width and height is needed. use PLAY_ResolutionScale.
    DATA_RECORD_TS,
    DATA_RECORD_PS,               // PS
    DATA_RECORD_RESIZE_DAV,
	DATA_RECORD_DAV,
	DATA_RECORD_AAC,              // AAC(Raw Audio)
	DATA_RECORD_WAV,              // WAV(Raw Audio)

	// if need to add enumeration, add beore it
	DATA_RECORD_COUNT			  // record type count 
}DATA_RECORD_TYPE;

PLAYSDK_API BOOL CALLMETHOD PLAY_StartDataRecord(LONG nPort, char *sFileName, int idataType);


/*
 * Stop recording stream data.
 *
 * @param[in] nPort Port number
  * @return BOOL,TRUE--succeeded FALSE--failed.
 * @note if failed,you can get the error code by calling PLAY_GetLastErrorEx.
 */
PLAYSDK_API BOOL CALLMETHOD PLAY_StopDataRecord(LONG nPort);